--- a/vue/public/mycss.css
+++ b/vue/public/mycss.css
@@ -6,6 +6,8 @@
  .dot-pulse {
     display: flex;
     position: relative;
+    margin-right: 2rem;
+    margin-left: 2rem;
     left: -9999px;
     width: 6px;
     height: 6px;
